<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.DetalleSiniestroFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fcfcfc"
            android:gravity="center"
            >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/principal4" />


            <TextView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:text="@string/datos"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textViewFechaYHora"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/fecha_del_accidente"
                android:layout_gravity="left"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textStyle="italic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewNombre"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/nombre"
                        android:textSize="15sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/textViewPatente"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/patente"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginStart="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDireccion"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/direccion"
                        android:textSize="15sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/textViewPoliza"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/poliza"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/email"
                        android:textSize="15sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/textViewTelefono"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="#11000000"
                        android:text="@string/telefono"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>
            <EditText
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Editar"
                android:drawableStart="@drawable/ic_action_edit"
                android:textAlignment="center"
                android:background="#11000000"/>

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:text="@string/fotos_del_accidente"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/imageViewAccidente"
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:text="@string/ubicacion"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map2"

                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="330dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    tools:context=".MapsActivity" />

            </LinearLayout>
            <EditText
                android:layout_width="110dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="Eliminar siniestro"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_action_delete"/>


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>



</android.support.constraint.ConstraintLayout>
