<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese_fecha_hora"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.025" />


    <EditText
        android:id="@+id/et_mostrar_fecha_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/formato_fecha"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_mostrar_hora_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/formato_hora"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/ib_obtener_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_action_calendar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ib_obtener_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_action_time"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
        tools:ignore="ContentDescription" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonSiguiente"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="236dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/siguiente"
        app:layout_constraintTop_toBottomOf="@+id/et_mostrar_hora_picker"
        />




</android.support.constraint.ConstraintLayout>
