<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorAccent"
    android:id="@+id/nestedScrollView">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/principal4" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/colorBackground"
            app:errorTextAppearance="@style/error_appearance"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_action_user"
                android:hint="@string/username"
                android:maxLines="1"
                android:textColorHint="@color/colorBackground"

                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="true"
            android:textColorHint="@color/colorBackground"
            app:hintEnabled="false">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColorHint="@color/colorBackground"
                android:maxLines="1"
                android:layout_marginTop="30dp"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_action_pass"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:text="@string/register" />



    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>