<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/TextViewCamara"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:width="1dp"
                android:padding="10dp"
                android:text="@string/camara"
                android:drawableStart="@drawable/ic_action_camera"
                android:textAlignment="textStart"
                android:textSize="22sp"
                />

            <TextView
                android:id="@+id/TextViewGaleria"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="@string/galeria"
                android:layout_marginStart="10dp"
                android:drawableStart="@drawable/ic_action_gallery"
                android:textAlignment="textStart"
                android:textSize="22sp"
                />


        </LinearLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/textInputLayoutBody"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:textColorHint="@color/colorBackground"
            app:errorTextAppearance="@style/error_appearance"
            app:hintEnabled="false">

            <ImageView
                android:id="@+id/ImageViewSeleccionada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="30dp" />


        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonLogin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/siguiente" />
        </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>




</RelativeLayout>